# comum

./: .gitignore  ABSTRACT.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Justfile  LICENSE  README.md  SECURITY.md
.archive/: INDEX.md  README.md
.opencode/: opencode.json
.opencode/agents/: capsulas.md  cartografo.md  corpus.md  curador.md  escritor.md  interop.md  normas.md  orquestrador.md  parceiro-epistemico.md  paridade-runtime.md  research.md
.opencode/journal/: epoch_2026_W15.md  epoch_2026_W16.md  epoch_2026_W17.md
.opencode/volverse/: chamada-publica.md  dna-volverse-no-comum.md  homepage-volverse-org-br.md  manifesto-curto.md  pagina-o-que-nos-une.md  plano-lancamento-30-dias.md  posts-launch.md
apps/: README.md
apps/agora/: README.md  capsules.yaml
apps/feira/: README.md  capsules.yaml
apps/mobile/: App.tsx  README.md  metro.config.js  package-lock.json  package.json  tsconfig.json
capsules/: README.md
capsules/agora/: Cargo.toml  agora.wasm
capsules/feira/: feira.wasm
capsules/mutirao/: Cargo.toml
cases/: README.md
cases/coherence/: README.md
cases/mutirao-legacy/: README.md
crates/: README.md
crates/comum-rs/: Cargo.toml
docs/: context.md  implementation-plan.md  roadmap.md  simulations.md  teoria-do-protocolo.md
docs/architecture/: overview.md  wasm-abi.md
docs/corpus/: 00-o-que-e-o-comum.md  01-apresentacao.md  02-o-problema-da-coordenacao.md  03-do-centro-ao-comum.md  04-testemunho-e-legibilidade-publica.md  05-contexto-prova-e-legitimidade.md  06-autoridade-emergente-e-revogabilidade.md  07-par-triade-e-escala-institucional.md  11-infraestrutura-e-colonizacao-abstrata.md  12-instituicoes-programaveis-e-limites.md  13-design-como-etica-da-forma.md  14-conclusoes-e-perguntas-abertas.md  README.md
docs/design/: README.md
docs/epistemologia/: README.md  arvore-editorial-mestra.md  cartografia-do-acervo.md  framework-agente.md  guia-editorial.md
docs/implementation/: README.md  capsule-ssot.md  interop.md  (+3 more)
impl/comum-rs/: Cargo.toml  README.md
impl/comum-rs/napi/: Cargo.toml
impl/comum-rs/napi/src/: lib.rs
impl/comum-rs/src/: abi.rs  claim.rs  crypto.rs  cte.rs  decoder.rs  did.rs  lib.rs  snapshot.rs  sync.rs  verbs.rs  wasm_runtime.rs
impl/comum-rs/src/commoner/: codec.rs  emit.rs  mod.rs  sync.rs  types.rs  validate.rs
impl/comum-rs/tests/: commoner.rs  conformance.rs  snapshot.rs  wasm_runtime.rs
runtime/: README.md
runtime/tooling/comum-capsule/: Cargo.toml  README.md
runtime/tooling/comum-capsule/src/: cli.rs  commands.rs  main.rs  model.rs  ops.rs  workspace.rs
simulations/: README.md
spec/: GLOSSARY.md
tools/: docs_audit.py  format_tables.py
(+243 files in other folders)
