[workspace]
resolver = "2"
members = [
  "impl/comum-rs",
  "impl/comum-rs/napi",
  "impl/capsulas/agora",
  "impl/capsulas/feira",
  "impl/capsulas/mutirao",
  "impl/simulations/agora-sim",
  "impl/simulations/feira-sim",
  "impl/simulations/mutirao-sim"
]

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
strip = true

[workspace.package]
edition = "2021"
