[workspace]
resolver = "2"
members = [
  "crates/comum-rs",
  "crates/comum-rs/napi",
  "capsules/agora",
  "capsules/feira",
  "capsules/mutirao",
  "simulations/agora",
  "simulations/feira",
  "simulations/mutirao",
  "simulations/coherence"
]

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
strip = true

[workspace.package]
edition = "2021"
