[workspace]
resolver = "2"
members = [
  "runtime/rust/comum-rs",
  "runtime/rust/comum-rs/napi",
  "apps/agora/capsules",
  "apps/agora/sims",
  "apps/feira/capsules",
  "apps/feira/sims",
  "cases/mutirao-legacy/capsule",
  "cases/mutirao-legacy/sim",
  "cases/coherence/sim"
]

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
strip = true

[workspace.package]
edition = "2021"
