[package]
name = "comum-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "comum_rs"
path = "src/lib.rs"

[[bin]]
name = "comum-cbor"
path = "src/bin/comum-cbor.rs"

[[bin]]
name = "wat2wasm"
path = "src/bin/wat2wasm.rs"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[dependencies]
bs58 = { version = "0.5", features = ["check"] }
ed25519-dalek = "2.1"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
wasmtime = "43"
wat = "1.0"
