[package]
name = "comum-capsule"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha3 = "0.10"
toml = "0.8"
walkdir = "2"
wasmparser = "0.220"
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3"
